test/e2e/testdata/httproute-stale-status.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: stale-status-gw
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
  - name: http-first
    port: 8888
    protocol: HTTP
    hostname: "other.example.com"
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stale-status-route
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: stale-status-gw
  hostnames:
  - "stale.example.com"
  rules:
  - backendRefs:
    - name: infra-backend-v1
      port: 8080
